Fix css / template so that copyright / trademarks are visible
git-svn-id: https://svn.apache.org/repos/asf/karaf/branches/karaf-2.2.x@1069884 13f79535-47bb-0310-9956-ffa450edef68

--- a/manual/src/main/webapp/css/style.css
+++ b/manual/src/main/webapp/css/style.css
@@ -76,9 +76,12 @@ body {
   padding: 0px 50px 0px 50px;
   min-height: 0em;
   text-align: center;
-  color: #5b8fbe;
+  color: white;
   font-size: 65%;
   font-family: Verdana, arial, sans-serif;
+}
+#site-footer {
+  margin: 5px;
 }
 #footer a:link, #footer a:visited {
   color: white;
